
pkginclude_HEADERS = core.h types.h compiler.h compiler-gcc.h sizes.h bitops.h bug.h log.h \
					 list.h rbtree.h idr.h bsearch.h fifo.h wait.h notifier.h completion.h \
					 bitmap.h non-atomic.h find_bit.h hweight.h utils.h common.h mempool.h \
					 memsizes.h console.h cmds.h daemon.h netsock.h workqueue.h timer.h hash.h \
					 poller.h ioasync.h hbeat.h queue.h packet.h pack_head.h configs.h \
					 iowait.h fake_atomic.h data_frag.h ethtools.h sockets.h parcel.h \
					 init.h 

